<?xml version="1.0"?>
<package>
  <name>sim_lattice_planner_2d</name>
  <version>0.0.0</version>
  <description>The lattice_planner_2d package</description>

  <maintainer email="hengli@inf.ethz.ch">Lionel Heng</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cauldron</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>dynocmap</build_depend>
  <build_depend>grid</build_depend>
  <build_depend>visualization_msgs</build_depend>
  
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <run_depend>cauldron</run_depend>
  <run_depend>dynocmap</run_depend>
  <run_depend>grid</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>
